--- a/media-gallery/web/mediagallery.css
+++ b/media-gallery/web/mediagallery.css
@@ -10,8 +10,7 @@ h1 {
 }
 
 #content {
-  height: 75%;
-  width: 74%;
+  max-width: 74%;
   overflow-y: scroll;
   border: 1px solid #aaa;
   border-radius: 5px;
@@ -19,14 +18,24 @@ h1 {
   background-color: #777;
 }
 
+img, video, audio {
+  max-width: 100%;
+  max-height: 75%;
+}
+
 #list {
-  height: 75%;
+  height: 400px;
   width: 25%;
   border: 1px solid #aaa;
   border-radius: 5px;
   display: inline-block;
   vertical-align: top;
   background-color: #777;
+}
+
+#GalleryList {
+  width: 100%;
+  height: 100%;
 }
 
 #info {
